# cmake-practice

./: .gitignore  README.md
t2/: CMakeLists.txt
t2/src/: main.cpp
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.cpp  hello.h
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt  main.cpp
